# pulsegraph

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.lab.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
docker/: entrypoint.sh
docs/: architecture.md  data-model.md  deployment.md
docs/adr/: 0001-langgraph-orchestration.md  0002-hybrid-model-routing.md  0003-agent-topology.md  0004-data-sources-plugin-pattern.md  0005-multi-tenant-auth.md  0006-evaluation-pipeline-step.md  0007-observability-langsmith.md  0008-rate-limiting-cost-caps.md  0009-secrets-management.md  0010-schema-drift-handling.md  0011-prompt-model-versioning.md  0012-offline-eval-feedback-loop.md  0013-llm-input-hardening.md  0014-embedding-versioning.md  0015-scheduling-workers.md  0016-notification-delivery.md  0017-deployment-cicd.md  0018-data-retention-gdpr.md  0019-testing-strategy.md  0020-operational-health-alerting.md  0021-authorization-audit-log.md  0022-redis-rate-limiting-caching.md  TODO.md
migrations/: env.py  migration_test.py
migrations/versions/: 05fd3d69bbaa_add_notification_attempts_column.py  1d6c2762d036_initial_schema.py  (+3 more)
scripts/: deploy_release.sh  gdpr_cascade_e2e.py  gdpr_cascade_e2e_test.py  grow_golden.py  lab_deploy.sh  offline_eval.py  reembed.py  smoke_compose_test.py  smoke_e2e.py  smoke_e2e_test.py
src/pulsegraph/: __init__.py  (+7 more)
(+136 files in other folders)
