[project]
name = "pulsegraph"
version = "0.1.0"
description = "Multi-tenant agent-orchestration system that watches open data sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
    "pgvector>=0.3",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "langgraph>=0.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "arq>=0.26",
    "redis>=5.0",
    "anthropic>=0.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "httpx2>=0.28",
    "fakeredis>=2.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulsegraph"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Depends()/Security() in argument defaults is the framework
# idiom, not a mutable-default bug.
"src/pulsegraph/api/**/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["."]
pythonpath = ["src"]
addopts = "--cov=pulsegraph --cov-report=term-missing"
markers = [
    "e2e: end-to-end test requiring the Docker stack (set PULSEGRAPH_E2E=1)",
]
